# ouroboros

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  environment.yaml  environment.yml  pixi.toml  pyproject.toml  requirements.txt  setup_dev_env.bat
.github/workflows/: Pytest.yml  black-action.yml  black.yml  coverage.yml  lint.yml  py-prerelease.yml  pylint.yml  pypi-publish.yml  pytest-314  pytest-314.yml  pytest-linux-314.yml  pytest-linux.yml  pytest-macos.yml  pytest-prerelease.yml  pytest-windows.yml  pytest.yml  python-package.yml  python-publish.yml  ruff.yml
.run/: Black.run.xml  Build Docs.run.xml  Build Python Prerelease Dockerfile.run.xml  Pylint.run.xml  Pytest conda.run.xml  Pytest venv.run.xml  Pytest.run.xml  Setup Dev Environment.run.xml
assets/test_data.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.gdbtable  a00000004.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a0000000a.freelist  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000a.spx  a0000000b.gdbtable  a0000000b.gdbtablx  a0000000c.gdbtable  a0000000c.spx  timestamps
benchmarks/: README.md  benchmarks.py
docs/: api.rst  build_docs.bat  conf.py  example.ipynb  examples.rst  index.rst  installation.rst  pytest_coverage.json  references.rst  requirements.txt  user_guide.rst
docs/api/: classes.rst  functions.rst  geoprocessing.rst  tools.rst  utilities.rst
docs/notebooks/: arcpy_comparison.ipynb  basic_usage.ipynb  database_structure.ipynb  fc_conversions.ipynb  field_calculations.ipynb  geoprocessing.ipynb  ibis_duckdb.ipynb  intro_example.ipynb  introduction.ipynb  pyarrow_demo.ipynb  rasters.ipynb  timer.py
notebooks/: basic_usage.ipynb  example.ipynb  ouroboros.ipynb  pyarrow.ipynb  pyarrow_demo.ipynb
src/ouroboros/: __init__.py  _core.py  _geoprocessing.py  _utils.py  core.py  ouroboros.py  tools.py  utils.py
tests/: Dockerfile  Dockerfile_314rc1  conftest.py  test_feature_class.py  test_geodatabase.py  test_geoprocessing.py  test_utilities.py  test_utils.py  tests.py
tests/docker/: Dockerfile  test.sh
tests/test_data.gdb/: a00000001.gdbtablx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a0000000a.freelist  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000c.gdbtablx  timestamps
tools/: build_docs.bat  slipcover_pct_covered_display.py  test_backports.bat  test_current.bat
