[project]
version = "1.0.0b3"
name = "ouroboros-arcpy"
authors = [{name = "Corbel", email = "dev@corbelspatial.com"}]
dynamic = []
requires-python = ">=3.10"
dependencies = [
    "fiona",
    "geoarrow-pyarrow",
    "geojson",
    "geopandas",
    "numpy",
    "pandas",
    "pyarrow",
    "pyogrio"
]
description = "Wrapper classes for pythonic use of arcpy Feature Classes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://pypi.org/project/ouroboros-arcpy/"
documentation = "https://app.readthedocs.org/projects/ouroboros-arcpy/"
repository = "https://github.com/corbel-spatial/ouroboros"
issues = "https://github.com/corbel-spatial/ouroboros/issues"
changelog = "https://github.com/corbel-spatial/ouroboros/blob/main/CHANGELOG.md"

[dependency-groups]
docs = ["sphinx", "myst-parser", "sphinx-rtd-theme"]
lint = ["black"]
test = ["pytest", "coverage"]
dev = ["ouroboros-arcpy",
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" }
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

# dev install steps
# python -m build
# python -m pip install -e . --group dev

# build docs
# .\docs\make html

# generate coverage
# coverage run -m pytest .\tests\tests.py; coverage html; start htmlcov\index.html
# coverage run -m pytest .\tests\tests.py; coverage json -o docs\pytest_coverage.json  --pretty-print