[project]
name = "ouroboros-gis"
authors = [{name = "Peter Von der Porten", email = "dev@corbelspatial.com"}]
dynamic = []
description = "Towards more pythonic use of GeoDatabases"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: GIS"
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.0",
    "matplotlib>=3.10.0",
    "xmltodict>=1.0.0"
]
version = "1.0.7"

[project.optional-dependencies]
raster = ["gdal>=3.8"]

[project.urls]
homepage = "https://pypi.org/project/ouroboros-gis/"
documentation = "https://ouroboros-gis.readthedocs.io/en/latest/"
repository = "https://github.com/corbel-spatial/ouroboros"
issues = "https://github.com/corbel-spatial/ouroboros/issues"
changelog = "https://github.com/corbel-spatial/ouroboros/blob/main/CHANGELOG.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.idea",
    "/.run",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ouroboros"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
pixi-pycharm = "*"

[tool.pixi.pypi-dependencies]
ouroboros-gis = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "test", "test-conda"], solve-group = "default" }

test = ["test"]
test-pypi = ["test-pypi", "test"]
test-conda = ["test-conda", "test"]

docs = ["test-pypi", "docs"]

test-py310-pypi = ["py310", "test", "test-pypi"]
test-py311-pypi = ["py311", "test", "test-pypi"]
test-py312-pypi = ["py312", "test", "test-pypi"]
test-py313-pypi = ["py313", "test", "test-pypi"]

test-py310-conda = ["py310", "test", "test-conda"]
test-py311-conda = ["py311", "test", "test-conda"]
test-py312-conda = ["py312", "test", "test-conda"]
test-py313-conda = ["py313", "test", "test-conda"]

[tool.pixi.feature.dev.dependencies]
pandas-stubs = "*"
ruff = "*"

[tool.pixi.feature.dev.pypi-dependencies]
hatchling = "*"

[tool.pixi.feature.test.pypi-dependencies]
pytest = "*"
pytest-xdist = "*"
slipcover = "*"

[tool.pixi.feature.test-pypi.pypi-dependencies]
geopandas = "*"
matplotlib = "*"
xmltodict = "*"

[tool.pixi.feature.test-conda.dependencies]
gdal = "*"
geopandas = "*"
matplotlib = "*"
xmltodict = "*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.dev.tasks]
build = "hatchling build"
lint = "ruff check ./src ./tests"

[tool.pixi.feature.test.tasks]
coverage = """
    slipcover --json --pretty-print --out ./docs/pytest_coverage.json -m pytest ./tests/tests.py &&
    python tools/slipcover_pct_covered_display.py docs/pytest_coverage.json
    """

test = "cd ./tests && pytest --no-header --force-short-summary -n auto ./tests.py"

[tool.pixi.feature.docs.pypi-dependencies]
jupyter = "*"
myst-parser = "*"
nbsphinx = "*"
notebook = "*"
sphinx = "*"
sphinx-copybutton = "*"
pydata-sphinx-theme = "*"

[tool.pixi.feature.docs.tasks]
docs = "./docs/make.bat html"
