[project]
version = "1.0.7"
name = "ouroboros-gis"
authors = [{name = "Peter Von der Porten", email = "dev@corbelspatial.com"}]
dynamic = []
description = "Towards more pythonic use of GeoDatabases"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: GIS"
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.0",
    "matplotlib>=3.10.0",
    "xmltodict>=1.0.0"
]

[project.optional-dependencies]
raster = ["gdal>=3.8"]

[project.urls]
homepage = "https://pypi.org/project/ouroboros-gis/"
documentation = "https://ouroboros-gis.readthedocs.io/en/latest/"
repository = "https://github.com/corbel-spatial/ouroboros"
issues = "https://github.com/corbel-spatial/ouroboros/issues"
changelog = "https://github.com/corbel-spatial/ouroboros/blob/main/CHANGELOG.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.idea",
    "/.run",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ouroboros"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
pixi-pycharm = "*"  # for IDE

[tool.pixi.pypi-dependencies]
ouroboros-gis = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
# IDE
pandas-stubs = "*"
# docs (should match docs/requirements.txt)
jupyter = "*"
myst-parser = "*"
nbsphinx = "*"
notebook = "*"
pydata-sphinx-theme = "*"
sphinx = "*"
sphinx-copybutton = "*"
# lint
ruff = "*"

[tool.pixi.feature.dev.pypi-dependencies]
# build
hatchling = "*"
# coverage
slipcover = "*"

[tool.pixi.feature.dev.tasks]
build = "hatchling build"
_coverage = "slipcover --source src --json --pretty-print --out ./docs/pytest_coverage.json -m pytest"
coverage = { cmd = "python tools/slipcover_pct_covered_display.py docs/pytest_coverage.json", depends-on = ["_coverage"] }
docs = "./docs/make html"
lint = "ruff check ./src ./tests"
lint-format = "ruff format ./src ./tests"
test = "pytest"

[tool.pixi.feature.dev.target.win-64.tasks]
docs = "./docs/make.bat html"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"

[tool.pixi.feature.conda-env.dependencies]
gdal = "*"
geopandas = "*"
matplotlib = "*"
xmltodict = "*"

[tool.pixi.feature.pypi-env.pypi-dependencies]
geopandas = "*"
matplotlib = "*"
xmltodict = "*"

[tool.pixi.feature.py310-conda]
dependencies = { python = "3.10.*" }
tasks = { test-py310-conda = "pytest -n auto"}

[tool.pixi.feature.py310-pypi]
dependencies = { python = "3.10.*" }
tasks = { test-py310-pypi = "pytest -n auto" }

[tool.pixi.feature.py311-conda]
dependencies = { python = "3.11.*" }
tasks = { test-py311-conda = "pytest -n auto" }

[tool.pixi.feature.py311-pypi]
dependencies = { python = "3.11.*" }
tasks = { test-py311-pypi = "pytest -n auto" }

[tool.pixi.feature.py312-conda]
dependencies = { python = "3.12.*" }
tasks = { test-py312-conda = "pytest -n auto" }

[tool.pixi.feature.py312-pypi]
dependencies = { python = "3.12.*" }
tasks = { test-py312-pypi = "pytest -n auto" }

[tool.pixi.feature.py313-conda]
dependencies = { python = "3.13.*" }
tasks = { test-py313-conda = "pytest -n auto" }

[tool.pixi.feature.py313-pypi]
dependencies = { python = "3.13.*" }
tasks = { test-py313-pypi = "pytest -n auto" }

[tool.pixi.environments]
default = ["default"]
dev = ["dev", "conda-env", "test"]
conda-env = ["conda-env"]
pypi-env = ["pypi-env"]
py310-conda = ["py310-conda", "conda-env", "test"]
py311-conda = ["py311-conda", "conda-env", "test"]
py312-conda = ["py312-conda", "conda-env", "test"]
py313-conda = ["py313-conda", "conda-env", "test"]
py310-pypi = ["py310-pypi", "pypi-env", "test"]
py311-pypi = ["py311-pypi", "pypi-env", "test"]
py312-pypi = ["py312-pypi", "pypi-env", "test"]
py313-pypi = ["py313-pypi", "pypi-env", "test"]
